--- a/Praktikum/Pertemuan5.html
+++ b/Praktikum/Pertemuan5.html
@@ -1,6 +1,7 @@
 <html>
 <head>
    <title>Belajar JavaScript</title>
+   <link rel="stylesheet" href="Pertemuan5.css" />
 </head>
 <body>
    <h1 id="judul">Selamat Datang</h1>
